# pattern-match-old

./: .gitignore  Cargo.toml  README.md
src/: ast_match.rs  ast_match_new.rs  macros.rs  main.rs  matchers.rs  matchers_new.rs  new.rs  new2.rs  new3.rs  new4.rs  pattern_tree.rs  pattern_tree_old.rs  repeat.rs
tests/: compiletest.rs
tests/ui/: simple_pattern.rs  simple_pattern.stderr  simple_pattern_2.rs  simple_pattern_2.stderr
